[package]
edition = "2021"
name = "actix-2"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "2.7.0"
actix-web = "4.1.0"
chrono = {version = "0.4.19", features = ["serde"]}
env_logger = "0.9.0"
serde = {version = "1.0.139", features = ["derive"]}
